[aamer/srikanth] fixed partnumber to pagenumber in coversheet and ds and added the margint to ds and coversheet and added the 15 rows to the register

--- a/coversheet.css
+++ b/coversheet.css
@@ -113,5 +113,6 @@ table {
     }
     .subpage{
         border: none;
+        margin: 8mm;
     }
 }
